# job-hunting

./: .env.example  .gitignore  README.md  applications-tracker.md  pyproject.toml
docs/issues/: agentic-section-template-rendering.md  one-page-overflow-detection.md  template-aware-llm-cv-generation.md
experience-bank/: README.md  contact.md  education.md  skills.md
experience-bank/projects/: crm-candidate-workflow-overlay.md  cv-database-and-ranking-system.md  ebay-fast-notification-saas.md  gog-cli-mcp-server.md  google-extension-recruiting-tools.md  inbetments-football-prediction-model.md  infrastructure-deployment-and-proxy-management.md  langchain-agentic-database-query-system.md  llm-powered-applications.md  mcp-news-aggregation-service.md  personality-test-saas.md  saas-applications-and-product-lifecycle.md
experience-bank/roles/: logan-sinclair.md  upwork-ml-tutor.md
experience-transcripts/: 1.md  2.md  3.md  4.md  5.md  6.md
src/cv_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  env.py  experience_bank.py  html_render.py  job_extract.py  job_fetch.py  logging.py  onboarding.py  output.py  paths.py  pdf.py  pdf_images.py  render_limits.py  run.py  schemas.py  tools.py  workspace.py
tests/: test_agent.py  test_cli.py  test_config.py  test_env.py  test_experience_bank.py  test_html_render.py  test_job_extract.py  test_onboarding.py  test_output.py  test_paths.py  test_pdf.py  test_pdf_images.py  test_run.py  test_schemas.py
