[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-agent"
version = "0.1.0"
description = "CLI agent for generating tailored CV content JSON from job descriptions."
readme = "experience-bank/README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.6.0",
]

[project.scripts]
cv-agent = "cv_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
